perf(7.0): allocation-reduction pass on encode/decode hot path (#4)
* perf(7.0): add internal Base64URL utility class

Centralizes URL-safe Base64 (no padding) -- the variant required by
RFC 7515 (JWS), RFC 7517 (JWK), and RFC 7638 (JWK thumbprint).

The JDK's Base64.getUrlEncoder() returns a cached singleton but
.withoutPadding() allocates a fresh Encoder on every call. Caching
the no-padding encoder once at class-init time eliminates the per-call
allocation. The cached encoder/decoder are immutable and thread-safe
per the JDK contract.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>

* perf(7.0): route URL-safe Base64 callsites through Base64URL

Migrates 11 callsites (7 encoders, 4 decoders) from Base64.getUrl* to
the new internal Base64URL helper. Eliminates the per-call Encoder
allocation in the JWT encode hot path (3 sites: header, payload,
signature) and provides a single auditable choke point if the URL-safe
Base64 policy ever changes.

Standard (non-URL) Base64 callsites in JWTUtils, JSONWebKeyConverter,
and PEMDecoder are unchanged -- those follow X.509 / PEM conventions
which require padding.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>

* perf(7.0): use String.length() for JWT input-size check

JWTDecoder.parseSegments was allocating a fresh byte[] of the entire
encoded token just to read its length. Compact JWS is base64url + '.',
a strict ASCII subset, so String.length() equals the UTF-8 byte length.
For sub-KB tokens this halves the byte-array churn in the decode path
before any JSON or crypto work runs.

Defense: a non-ASCII string up to 4x maxInputBytes in raw bytes would
slip past this check, but the per-character base64url alphabet scan in
parseSegments / strictBase64UrlDecode rejects on the first invalid byte.
No real DoS opening.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>

* perf(7.0): drop unmodifiable wrappers from toSerializableMap

Header.toSerializableMap and JWT.toSe